# open-source-fabric-optee-chaincode

./: README.md
chaincode/: Android.mk  CMakeLists.txt  Makefile
chaincode/ta/: Android.mk  Makefile  chaincode_library.c  chaincode_library.h  chaincode_tee_ree_communication.h  coffee_tracking_chaincode.c  sub.mk  user_ta_header_defines.h
chaincode/ta/include/: coffee_tracking_chaincode.h
chaincode_proxy/: Android.mk  CMakeLists.txt  Makefile
chaincode_proxy/host/: Makefile  chaincode_proxy.cpp  invocation.proto
chaincode_wrapper/: chaincode.go
chaincode_wrapper/cmd/: main.go
chaincode_wrapper/proto/: invocation.proto
documentation/: chaincode-and-chaincode-proxy-qemu.md  chaincode-and-chaincode-proxy-rapi.md  chaincode-wrapper.md  install-fabric.sh  install-grpc.sh  install-optee.sh  qemu_br_tap.sh
